[package]
name = "vpass"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
description = "Opinionated password manager"
edition = "2018"

[dependencies]
base64 = "0.10.1"
bincode = "1.1.4"
crc = "1.8"
bitvec = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
clipboard = "0.5.0"
dirs = "2.0.1"
flate2 = "1.0"
log = "0.4"
maplit = "1.0.1"
matches = "0.1.8"
pretty_env_logger = "0.3"
reqwest = "0.9.18"
rpassword = "3.0.2"
rust_sodium = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
strum = "0.15.0"
strum_macros = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
wsl = "0.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.1"
rexpect = "0.3"
tempfile = "3.0.8"
